add count endpoint for starboard entries
